# PUP

./: 1406pib1_LOGAN.txt  1406pib1_LOGANLR.txt  1406pib1_LOGANLR_PVC2C.txt  1406pib1_LOGANLR_RSF.txt  1406pib1_LOGAN_PVC2C.txt  1406pib1_LOGAN_RSF.txt  1406pib1_Left-Cerebellum-Cortex.mdl  1406pib1_msum_Left-Cerebellum-Cortex.suvr  1406pib1_msum_SUVR.txt  1406pib1_msum_SUVRLR.txt  1406pib1_msum_SUVRLR_PVC2C.txt  1406pib1_msum_SUVRLR_RSF.txt  1406pib1_msum_SUVR_PVC2C.txt  1406pib1_msum_SUVR_RSF.txt  LICENSE  PUP.docx  README.md  ROIs  manroi_sample.param  pet.param  templateroi.param
4dfp/: 4dfp_format.doc  4dfp_programs.doc  4dfp_scripts.doc  README  imgreg_4dfp.txt  make_nil-tools.csh  mode.txt
4dfp/4dfp_scripts/: 09_t4  111.4dfp.ifh  222.4dfp.ifh  333.4dfp.ifh  711-2B_to_MNI152lin_T1_t4  AcenterH  CT2mpr_4dfp  C_t4  MNI152_T1_1mm.4dfp.ifh  MNI152_T1_2mm.4dfp.ifh  MNI152_T1_3mm.4dfp.ifh  MNI152lin_T1_to_711-2B_t4  RFX2.csh  ROI_voxcount  S_t4  T_t4  alpay.m  avgmpr_4dfp  blockdesign_to_regressor.awk  brec  bval_bvec_to_prm.csh  chop_4dfp  compute_run_sd1.csh  conc2format  conc_4dfp  conc_mv  criteria2dat.csh  cross_DWI_imgreg_4dfp  cross_bold_pp_121215.csh  cross_day_imgreg_4dfp  cross_img_mov_4dfp  cross_img_movm_4dfp  cross_mpr_imgreg_4dfp  dcm_sort  epi2mpr2atl1_4dfp  epi2mpr2atl2_4dfp  epi2mpr2atlv_4dfp  epi2t1w_4dfp  epi2t2w2mpr2atl1_4dfp  epi2t2w2mpr2atl2_4dfp  (+61 more)
4dfp/4dfptoanalyze/: 4dfptoanalyze.c  4dfptoanalyze.mak
4dfp/dcm_to_4dfp/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  condition.c  config.h  config.h.in  config.status  configure  configure.ac  ctnthread.c  dcm_to_4dfp.c  dcmcond.c  dcmdict.c  dcmsupport.c  gitversion.c  lst.c  pixel_ops.c  test_dcm.c  test_dcm_to_4dfp.c  utility.c
4dfp/dcm_to_4dfp/include/: Makefile  Makefile.am  Makefile.in  condition.h  ctnthread.h  dcm_to_analyze.h  dcmprivate.h  dicom.h  dicom_objects.h  dicom_uids.h  lst.h  lstprivate.h  utility.h
AVtemplate/: AV45ROI.4dfp.hdr  AV45ROI.4dfp.ifh  AV45ROI.4dfp.img  AV45ROI.4dfp.img.rec  AV45ROI.txt  AV45_A01_PETtmp.4dfp.hdr  AV45_A01_PETtmp.4dfp.ifh  AV45_A01_PETtmp.4dfp.img  AV45_A01_PETtmp.4dfp.img.rec  brainmask.4dfp.hdr  brainmask.4dfp.ifh  brainmask.4dfp.img  brainmask.4dfp.img.rec
IDAIF/: TOFMRApreproc  emmraabseg  emmraseg  petaifpreproc  petaifproc  petaiftac  petarttac
matlabcode/: Getifh.m  Writeifh.m  emab.m  emabv1.m  emart.m  emart2.m  emartv1.m  findtroisize.m  read4dfp.m  write4dfp.m
scripts/: PETinfo  fslogansum  fspreproc  fsrefroi  fssuvrsum  manroipostproc  mgzto4dfp  mratlpreproc  nih_4dfp  pet2petatl  petatlpreproc  petatlsuvrsum  petcombinetac  petloganrep  petmdlframes  petmdlsum  petmergeroi  petmoco  petpreproc  petproc  petrefroi  petreg  petroiint  petroiloganREF  petroitac  petsuvr  petsuvrrep  pettb.pl  preprocfs  reg2img  roilogansum  rsf2roilist  sif_4dfp  suvrROI  targpreproc
src/: ANALYZE.h  Getifh.c  Getifh.h  Makefile  Makefile~  PreprocessRSFtest2.c  RSF.c  RSF.h  calrsfmat.c  cgauss3d.c  endianio.c  endianio.h  fftsol.f  fs2brain.c  ifh.h  librms.h  loganREF.c  loganREFROI.c  nrutil.c  rec.h  roieval2.c  roieval3.c  rsfroieval2.c
(+384 files in other folders)
